Fix bug with Soundcloud embbeded widget missalignment

--- a/src/components/news/News/NewsComponent.css
+++ b/src/components/news/News/NewsComponent.css
@@ -190,6 +190,7 @@
     display: -webkit-flex;
     flex: 0 0 auto;
     
+    flex-direction: column;
     justify-content: center;
     align-content: center;
     align-items: center;
